// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Testing getCalendar function Should return calendar with winners 1`] = `
[
  {
    "dates": {
      "end": 2024-03-02T23:59:59.000Z,
      "start": 2024-02-29T00:00:00.000Z,
    },
    "name": "Sakhir",
    "resultsLink": "https://www.fiaformula2.com/Results?raceid=1064",
    "round": 1,
    "winners": [
      {
        "driverLink": "https://www.fiaformula2.com/Drivers/1227/Zane-Maloney",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f2/global/drivers/2024/Official%20portraits/05_Maloney",
        "name": "Z. Maloney",
        "raceType": "Sprint",
      },
      {
        "driverLink": "https://www.fiaformula2.com/Drivers/1227/Zane-Maloney",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f2/global/drivers/2024/Official%20portraits/05_Maloney",
        "name": "Z. Maloney",
        "raceType": "Main Race",
      },
    ],
  },
  {
    "dates": {
      "end": 2024-03-09T23:59:59.000Z,
      "start": 2024-03-07T00:00:00.000Z,
    },
    "name": "Jeddah",
    "resultsLink": "https://www.fiaformula2.com/Results?raceid=1065",
    "round": 2,
    "winners": [
      {
        "driverLink": "https://www.fiaformula2.com/Drivers/1224/Dennis-Hauger",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f2/global/drivers/2024/Official%20portraits/11_Hauger",
        "name": "D. Hauger",
        "raceType": "Sprint",
      },
      {
        "driverLink": "https://www.fiaformula2.com/Drivers/1216/Enzo-Fittipaldi",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f2/global/drivers/2024/Official%20portraits/14_Fittipaldi",
        "name": "E. Fittipaldi",
        "raceType": "Main Race",
      },
    ],
  },
  {
    "dates": {
      "end": 2024-03-24T23:59:59.000Z,
      "start": 2024-03-22T00:00:00.000Z,
    },
    "name": "Melbourne",
    "resultsLink": "https://www.fiaformula2.com/Results?raceid=1066",
    "round": 3,
    "winners": [
      {
        "driverLink": "https://www.fiaformula2.com/Drivers/1232/Roman-Stanek",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f2/global/drivers/2025/Official/02_Stanek",
        "name": "R. Stanek",
        "raceType": "Sprint",
      },
      {
        "driverLink": "https://www.fiaformula2.com/Drivers/1233/Isack-Hadjar",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f2/global/drivers/2024/Official%20portraits/20_Hadjar",
        "name": "I. Hadjar",
        "raceType": "Main Race",
      },
    ],
  },
  {
    "dates": {
      "end": 2024-05-19T23:59:59.000Z,
      "start": 2024-05-17T00:00:00.000Z,
    },
    "name": "Imola",
    "resultsLink": "https://www.fiaformula2.com/Results?raceid=1067",
    "round": 4,
    "winners": [
      {
        "driverLink": "https://www.fiaformula2.com/Drivers/1237/Franco-Colapinto",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f2/global/drivers/2024/Official%20portraits/12_Colapinto",
        "name": "F. Colapinto",
        "raceType": "Sprint",
      },
      {
        "driverLink": "https://www.fiaformula2.com/Drivers/1233/Isack-Hadjar",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f2/global/drivers/2024/Official%20portraits/20_Hadjar",
        "name": "I. Hadjar",
        "raceType": "Main Race",
      },
    ],
  },
  {
    "dates": {
      "end": 2024-05-26T23:59:59.000Z,
      "start": 2024-05-23T00:00:00.000Z,
    },
    "name": "Monaco",
    "resultsLink": "https://www.fiaformula2.com/Results?raceid=1068",
    "round": 5,
    "winners": [
      {
        "driverLink": "https://www.fiaformula2.com/Drivers/1246/Taylor-Barnard",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f2/global/drivers/2024/Official%20portraits/Barnard_2024-04-23_F2_Portraits_305618_Wn82LuNR",
        "name": "T. Barnard",
        "raceType": "Sprint",
      },
      {
        "driverLink": "https://www.fiaformula2.com/Drivers/1239/Zak-OSullivan",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f2/global/drivers/2024/Official%20portraits/02_O_Sullivan",
        "name": "Z. O'Sullivan",
        "raceType": "Main Race",
      },
    ],
  },
  {
    "dates": {
      "end": 2024-06-23T23:59:59.000Z,
      "start": 2024-06-21T00:00:00.000Z,
    },
    "name": "Barcelona",
    "resultsLink": "https://www.fiaformula2.com/Results?raceid=1069",
    "round": 6,
    "winners": [
      {
        "driverLink": "https://www.fiaformula2.com/Drivers/1235/Victor-Martins",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f2/global/drivers/2025/Official/14_Martins",
        "name": "V. Martins",
        "raceType": "Sprint",
      },
      {
        "driverLink": "https://www.fiaformula2.com/Drivers/1234/Jak-Crawford",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f2/global/drivers/2025/Official/11_Crawford",
        "name": "J. Crawford",
        "raceType": "Main Race",
      },
    ],
  },
  {
    "dates": {
      "end": 2024-06-30T23:59:59.000Z,
      "start": 2024-06-28T00:00:00.000Z,
    },
    "name": "Spielberg",
    "resultsLink": "https://www.fiaformula2.com/Results?raceid=1070",
    "round": 7,
    "winners": [
      {
        "driverLink": "https://www.fiaformula2.com/Drivers/1228/Oliver-Bearman",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f2/global/drivers/2024/Official%20portraits/03_Bearman",
        "name": "O. Bearman",
        "raceType": "Sprint",
      },
      {
        "driverLink": "https://www.fiaformula2.com/Drivers/1242/Gabriel-Bortoleto",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f2/global/drivers/2024/Official%20portraits/10_Bortoleto",
        "name": "G. Bortoleto",
        "raceType": "Main Race",
      },
    ],
  },
  {
    "dates": {
      "end": 2024-07-07T23:59:59.000Z,
      "start": 2024-07-05T00:00:00.000Z,
    },
    "name": "Silverstone",
    "resultsLink": "https://www.fiaformula2.com/Results?raceid=1071",
    "round": 8,
    "winners": [
      {
        "driverLink": "https://www.fiaformula2.com/Drivers/1240/Andrea-Kimi-Antonelli",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f2/global/drivers/2024/Official%20portraits/04_Antonelli",
        "name": "A. Antonelli",
        "raceType": "Sprint",
      },
      {
        "driverLink": "https://www.fiaformula2.com/Drivers/1233/Isack-Hadjar",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f2/global/drivers/2024/Official%20portraits/20_Hadjar",
        "name": "I. Hadjar",
        "raceType": "Main Race",
      },
    ],
  },
  {
    "dates": {
      "end": 2024-07-21T23:59:59.000Z,
      "start": 2024-07-19T00:00:00.000Z,
    },
    "name": "Budapest",
    "resultsLink": "https://www.fiaformula2.com/Results?raceid=1072",
    "round": 9,
    "winners": [
      {
        "driverLink": "https://www.fiaformula2.com/Drivers/1231/Kush-Maini",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f2/global/drivers/2025/Official/12_Maini",
        "name": "K. Maini",
        "raceType": "Sprint",
      },
      {
        "driverLink": "https://www.fiaformula2.com/Drivers/1240/Andrea-Kimi-Antonelli",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f2/global/drivers/2024/Official%20portraits/04_Antonelli",
        "name": "A. Antonelli",
        "raceType": "Main Race",
      },
    ],
  },
  {
    "dates": {
      "end": 2024-07-28T23:59:59.000Z,
      "start": 2024-07-26T00:00:00.000Z,
    },
    "name": "Spa-Francorchamps",
    "resultsLink": "https://www.fiaformula2.com/Results?raceid=1073",
    "round": 10,
    "winners": [
      {
        "driverLink": "https://www.fiaformula2.com/Drivers/1239/Zak-OSullivan",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f2/global/drivers/2024/Official%20portraits/02_O_Sullivan",
        "name": "Z. O'Sullivan",
        "raceType": "Sprint",
      },
      {
        "driverLink": "https://www.fiaformula2.com/Drivers/1233/Isack-Hadjar",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f2/global/drivers/2024/Official%20portraits/20_Hadjar",
        "name": "I. Hadjar",
        "raceType": "Main Race",
      },
    ],
  },
  {
    "dates": {
      "end": 2024-09-01T23:59:59.000Z,
      "start": 2024-08-30T00:00:00.000Z,
    },
    "name": "Monza",
    "resultsLink": "https://www.fiaformula2.com/Results?raceid=1074",
    "round": 11,
    "winners": [
      {
        "driverLink": "https://www.fiaformula2.com/Drivers/1228/Oliver-Bearman",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f2/global/drivers/2024/Official%20portraits/03_Bearman",
        "name": "O. Bearman",
        "raceType": "Sprint",
      },
      {
        "driverLink": "https://www.fiaformula2.com/Drivers/1242/Gabriel-Bortoleto",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f2/global/drivers/2024/Official%20portraits/10_Bortoleto",
        "name": "G. Bortoleto",
        "raceType": "Main Race",
      },
    ],
  },
  {
    "dates": {
      "end": 2024-09-15T23:59:59.000Z,
      "start": 2024-09-13T00:00:00.000Z,
    },
    "name": "Baku",
    "resultsLink": "https://www.fiaformula2.com/Results?raceid=1075",
    "round": 12,
    "winners": [
      {
        "driverLink": "https://www.fiaformula2.com/Drivers/1244/Joshua-Durksen",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f2/global/drivers/2025/Official/20_Durksen",
        "name": "J. Dürksen",
        "raceType": "Sprint",
      },
      {
        "driverLink": "https://www.fiaformula2.com/Drivers/1215/Richard-Verschoor",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f2/global/drivers/2025/Official/06_Verschoor",
        "name": "R. Verschoor",
        "raceType": "Main Race",
      },
    ],
  },
  {
    "dates": {
      "end": 2024-12-01T23:59:59.000Z,
      "start": 2024-11-29T00:00:00.000Z,
    },
    "name": "Lusail",
    "resultsLink": "https://www.fiaformula2.com/Results?raceid=1076",
    "round": 13,
    "winners": [
      {
        "driverLink": "https://www.fiaformula2.com/Drivers/1228/Oliver-Bearman",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f2/global/drivers/2024/Official%20portraits/03_Bearman",
        "name": "O. Bearman",
        "raceType": "Sprint",
      },
      {
        "driverLink": "https://www.fiaformula2.com/Drivers/1238/Paul-Aron",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f2/global/drivers/2024/Official%20portraits/17_Aron",
        "name": "P. Aron",
        "raceType": "Main Race",
      },
    ],
  },
  {
    "dates": {
      "end": 2024-12-08T23:59:59.000Z,
      "start": 2024-12-06T00:00:00.000Z,
    },
    "name": "Yas Island",
    "resultsLink": "https://www.fiaformula2.com/Results?raceid=1077",
    "round": 14,
    "winners": [
      {
        "driverLink": "https://www.fiaformula2.com/Drivers/1243/Josep-Maria-Marti",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f2/global/drivers/2025/Official/03_Marti",
        "name": "J. Martí",
        "raceType": "Sprint",
      },
      {
        "driverLink": "https://www.fiaformula2.com/Drivers/1244/Joshua-Durksen",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f2/global/drivers/2025/Official/20_Durksen",
        "name": "J. Dürksen",
        "raceType": "Main Race",
      },
    ],
  },
]
`;

exports[`Testing getCalendar function Should return calendar without winners 1`] = `
[
  {
    "dates": {
      "end": 2024-03-02T23:59:59.000Z,
      "start": 2024-02-29T00:00:00.000Z,
    },
    "name": "Sakhir",
    "resultsLink": "https://www.fiaformula2.com/Results?raceid=1064",
    "round": 1,
  },
  {
    "dates": {
      "end": 2024-03-09T23:59:59.000Z,
      "start": 2024-03-07T00:00:00.000Z,
    },
    "name": "Jeddah",
    "resultsLink": "https://www.fiaformula2.com/Results?raceid=1065",
    "round": 2,
  },
  {
    "dates": {
      "end": 2024-03-24T23:59:59.000Z,
      "start": 2024-03-22T00:00:00.000Z,
    },
    "name": "Melbourne",
    "resultsLink": "https://www.fiaformula2.com/Results?raceid=1066",
    "round": 3,
  },
  {
    "dates": {
      "end": 2024-05-19T23:59:59.000Z,
      "start": 2024-05-17T00:00:00.000Z,
    },
    "name": "Imola",
    "resultsLink": "https://www.fiaformula2.com/Results?raceid=1067",
    "round": 4,
  },
  {
    "dates": {
      "end": 2024-05-26T23:59:59.000Z,
      "start": 2024-05-23T00:00:00.000Z,
    },
    "name": "Monaco",
    "resultsLink": "https://www.fiaformula2.com/Results?raceid=1068",
    "round": 5,
  },
  {
    "dates": {
      "end": 2024-06-23T23:59:59.000Z,
      "start": 2024-06-21T00:00:00.000Z,
    },
    "name": "Barcelona",
    "resultsLink": "https://www.fiaformula2.com/Results?raceid=1069",
    "round": 6,
  },
  {
    "dates": {
      "end": 2024-06-30T23:59:59.000Z,
      "start": 2024-06-28T00:00:00.000Z,
    },
    "name": "Spielberg",
    "resultsLink": "https://www.fiaformula2.com/Results?raceid=1070",
    "round": 7,
  },
  {
    "dates": {
      "end": 2024-07-07T23:59:59.000Z,
      "start": 2024-07-05T00:00:00.000Z,
    },
    "name": "Silverstone",
    "resultsLink": "https://www.fiaformula2.com/Results?raceid=1071",
    "round": 8,
  },
  {
    "dates": {
      "end": 2024-07-21T23:59:59.000Z,
      "start": 2024-07-19T00:00:00.000Z,
    },
    "name": "Budapest",
    "resultsLink": "https://www.fiaformula2.com/Results?raceid=1072",
    "round": 9,
  },
  {
    "dates": {
      "end": 2024-07-28T23:59:59.000Z,
      "start": 2024-07-26T00:00:00.000Z,
    },
    "name": "Spa-Francorchamps",
    "resultsLink": "https://www.fiaformula2.com/Results?raceid=1073",
    "round": 10,
  },
  {
    "dates": {
      "end": 2024-09-01T23:59:59.000Z,
      "start": 2024-08-30T00:00:00.000Z,
    },
    "name": "Monza",
    "resultsLink": "https://www.fiaformula2.com/Results?raceid=1074",
    "round": 11,
  },
  {
    "dates": {
      "end": 2024-09-15T23:59:59.000Z,
      "start": 2024-09-13T00:00:00.000Z,
    },
    "name": "Baku",
    "resultsLink": "https://www.fiaformula2.com/Results?raceid=1075",
    "round": 12,
  },
  {
    "dates": {
      "end": 2024-12-01T23:59:59.000Z,
      "start": 2024-11-29T00:00:00.000Z,
    },
    "name": "Lusail",
    "resultsLink": "https://www.fiaformula2.com/Results?raceid=1076",
    "round": 13,
  },
  {
    "dates": {
      "end": 2024-12-08T23:59:59.000Z,
      "start": 2024-12-06T00:00:00.000Z,
    },
    "name": "Yas Island",
    "resultsLink": "https://www.fiaformula2.com/Results?raceid=1077",
    "round": 14,
  },
]
`;

exports[`Testing getCalendar function Should return f3 calendar with winners 1`] = `
[
  {
    "dates": {
      "end": 2024-03-02T23:59:59.000Z,
      "start": 2024-02-29T00:00:00.000Z,
    },
    "name": "Sakhir",
    "resultsLink": "https://www.fiaformula3.com/Results?raceid=1049",
    "round": 1,
    "winners": [
      {
        "driverLink": "https://www.fiaformula3.com/Drivers/1443/Arvid-Lindblad",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f3/global/drivers/2024/2024%20official%20portraits/03_Lindblad",
        "name": "A. Lindblad",
        "raceType": "Sprint",
      },
      {
        "driverLink": "https://www.fiaformula3.com/Drivers/1437/Luke-Browning",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f3/global/drivers/2024/2024%20official%20portraits/0U0A7363_5YOWFR6b",
        "name": "L. Browning",
        "raceType": "Main Race",
      },
    ],
  },
  {
    "dates": {
      "end": 2024-03-24T23:59:59.000Z,
      "start": 2024-03-22T00:00:00.000Z,
    },
    "name": "Melbourne",
    "resultsLink": "https://www.fiaformula3.com/Results?raceid=1050",
    "round": 2,
    "winners": [
      {
        "driverLink": "https://www.fiaformula3.com/Drivers/1446/Martinius-Stenshorne",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f3/global/drivers/2025/2025%20Driver%20profiles/14_Stenshorne",
        "name": "M. Stenshorne",
        "raceType": "Sprint",
      },
      {
        "driverLink": "https://www.fiaformula3.com/Drivers/1422/Dino-Beganovic",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f3/global/drivers/2024/2024%20official%20portraits/01_Beganovic",
        "name": "D. Beganovic",
        "raceType": "Main Race",
      },
    ],
  },
  {
    "dates": {
      "end": 2024-05-19T23:59:59.000Z,
      "start": 2024-05-17T00:00:00.000Z,
    },
    "name": "Imola",
    "resultsLink": "https://www.fiaformula3.com/Results?raceid=1051",
    "round": 3,
    "winners": [
      {
        "driverLink": "https://www.fiaformula3.com/Drivers/1417/Oliver-Goethe",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f3/global/drivers/2024/2024%20official%20portraits/10_Goethe",
        "name": "O. Goethe",
        "raceType": "Sprint",
      },
      {
        "driverLink": "https://www.fiaformula3.com/Drivers/1444/Sami-Meguetounif",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f3/global/drivers/2024/2024%20official%20portraits/05_Meguetounif",
        "name": "S. Meguetounif",
        "raceType": "Main Race",
      },
    ],
  },
  {
    "dates": {
      "end": 2024-05-26T23:59:59.000Z,
      "start": 2024-05-23T00:00:00.000Z,
    },
    "name": "Monaco",
    "resultsLink": "https://www.fiaformula3.com/Results?raceid=1052",
    "round": 4,
    "winners": [
      {
        "driverLink": "https://www.fiaformula3.com/Drivers/1425/Nikola-Tsolov",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f3/global/drivers/2025/2025%20Driver%20profiles/12_Tsolov",
        "name": "N. Tsolov",
        "raceType": "Sprint",
      },
      {
        "driverLink": "https://www.fiaformula3.com/Drivers/1427/Gabriele-Mini",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f3/global/drivers/2024/2024%20official%20portraits/02_Mini",
        "name": "G. Minì",
        "raceType": "Main Race",
      },
    ],
  },
  {
    "dates": {
      "end": 2024-06-23T23:59:59.000Z,
      "start": 2024-06-21T00:00:00.000Z,
    },
    "name": "Barcelona",
    "resultsLink": "https://www.fiaformula3.com/Results?raceid=1053",
    "round": 5,
    "winners": [
      {
        "driverLink": "https://www.fiaformula3.com/Drivers/1426/Mari-Boya",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f3/global/drivers/2025/2025%20Driver%20profiles/10_Boya",
        "name": "M. Boya",
        "raceType": "Sprint",
      },
      {
        "driverLink": "https://www.fiaformula3.com/Drivers/1443/Arvid-Lindblad",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f3/global/drivers/2024/2024%20official%20portraits/03_Lindblad",
        "name": "A. Lindblad",
        "raceType": "Main Race",
      },
    ],
  },
  {
    "dates": {
      "end": 2024-06-30T23:59:59.000Z,
      "start": 2024-06-28T00:00:00.000Z,
    },
    "name": "Spielberg",
    "resultsLink": "https://www.fiaformula3.com/Results?raceid=1054",
    "round": 6,
    "winners": [
      {
        "driverLink": "https://www.fiaformula3.com/Drivers/1425/Nikola-Tsolov",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f3/global/drivers/2025/2025%20Driver%20profiles/12_Tsolov",
        "name": "N. Tsolov",
        "raceType": "Sprint",
      },
      {
        "driverLink": "https://www.fiaformula3.com/Drivers/1437/Luke-Browning",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f3/global/drivers/2024/2024%20official%20portraits/0U0A7363_5YOWFR6b",
        "name": "L. Browning",
        "raceType": "Main Race",
      },
    ],
  },
  {
    "dates": {
      "end": 2024-07-07T23:59:59.000Z,
      "start": 2024-07-05T00:00:00.000Z,
    },
    "name": "Silverstone",
    "resultsLink": "https://www.fiaformula3.com/Results?raceid=1055",
    "round": 7,
    "winners": [
      {
        "driverLink": "https://www.fiaformula3.com/Drivers/1443/Arvid-Lindblad",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f3/global/drivers/2024/2024%20official%20portraits/03_Lindblad",
        "name": "A. Lindblad",
        "raceType": "Sprint",
      },
      {
        "driverLink": "https://www.fiaformula3.com/Drivers/1443/Arvid-Lindblad",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f3/global/drivers/2024/2024%20official%20portraits/03_Lindblad",
        "name": "A. Lindblad",
        "raceType": "Main Race",
      },
    ],
  },
  {
    "dates": {
      "end": 2024-07-21T23:59:59.000Z,
      "start": 2024-07-19T00:00:00.000Z,
    },
    "name": "Budapest",
    "resultsLink": "https://www.fiaformula3.com/Results?raceid=1056",
    "round": 8,
    "winners": [
      {
        "driverLink": "https://www.fiaformula3.com/Drivers/1434/Nikita-Bedrin",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f3/global/drivers/2024/2024%20official%20portraits/Bedrin_2024-04-16_F3_Portraits105094_CUDATT1l",
        "name": "N. Bedrin",
        "raceType": "Sprint",
      },
      {
        "driverLink": "https://www.fiaformula3.com/Drivers/1425/Nikola-Tsolov",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f3/global/drivers/2025/2025%20Driver%20profiles/12_Tsolov",
        "name": "N. Tsolov",
        "raceType": "Main Race",
      },
    ],
  },
  {
    "dates": {
      "end": 2024-07-28T23:59:59.000Z,
      "start": 2024-07-26T00:00:00.000Z,
    },
    "name": "Spa-Francorchamps",
    "resultsLink": "https://www.fiaformula3.com/Results?raceid=1057",
    "round": 9,
    "winners": [
      {
        "driverLink": "https://www.fiaformula3.com/Drivers/1422/Dino-Beganovic",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f3/global/drivers/2024/2024%20official%20portraits/01_Beganovic",
        "name": "D. Beganovic",
        "raceType": "Sprint",
      },
      {
        "driverLink": "https://www.fiaformula3.com/Drivers/1450/Callum-Voisin",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f3/global/drivers/2025/2025%20Driver%20profiles/23_Voisin",
        "name": "C. Voisin",
        "raceType": "Main Race",
      },
    ],
  },
  {
    "dates": {
      "end": 2024-09-01T23:59:59.000Z,
      "start": 2024-08-30T00:00:00.000Z,
    },
    "name": "Monza",
    "resultsLink": "https://www.fiaformula3.com/Results?raceid=1058",
    "round": 10,
    "winners": [
      {
        "driverLink": "https://www.fiaformula3.com/Drivers/1453/Tim-Tramnitz",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f3/global/drivers/2025/2025%20Driver%20profiles/17_Tramnitz",
        "name": "T. Tramnitz",
        "raceType": "Sprint",
      },
      {
        "driverLink": "https://www.fiaformula3.com/Drivers/1444/Sami-Meguetounif",
        "imgLink": "https://res.cloudinary.com/prod-f2f3/ar_16:9,c_fill,dpr_1.0,f_auto,g_auto,h_169,w_300/v1/f3/global/drivers/2024/2024%20official%20portraits/05_Meguetounif",
        "name": "S. Meguetounif",
        "raceType": "Main Race",
      },
    ],
  },
]
`;

exports[`Testing getCalendar function Should return f3 calendar without winners 1`] = `
[
  {
    "dates": {
      "end": 2024-03-02T23:59:59.000Z,
      "start": 2024-02-29T00:00:00.000Z,
    },
    "name": "Sakhir",
    "resultsLink": "https://www.fiaformula3.com/Results?raceid=1049",
    "round": 1,
  },
  {
    "dates": {
      "end": 2024-03-24T23:59:59.000Z,
      "start": 2024-03-22T00:00:00.000Z,
    },
    "name": "Melbourne",
    "resultsLink": "https://www.fiaformula3.com/Results?raceid=1050",
    "round": 2,
  },
  {
    "dates": {
      "end": 2024-05-19T23:59:59.000Z,
      "start": 2024-05-17T00:00:00.000Z,
    },
    "name": "Imola",
    "resultsLink": "https://www.fiaformula3.com/Results?raceid=1051",
    "round": 3,
  },
  {
    "dates": {
      "end": 2024-05-26T23:59:59.000Z,
      "start": 2024-05-23T00:00:00.000Z,
    },
    "name": "Monaco",
    "resultsLink": "https://www.fiaformula3.com/Results?raceid=1052",
    "round": 4,
  },
  {
    "dates": {
      "end": 2024-06-23T23:59:59.000Z,
      "start": 2024-06-21T00:00:00.000Z,
    },
    "name": "Barcelona",
    "resultsLink": "https://www.fiaformula3.com/Results?raceid=1053",
    "round": 5,
  },
  {
    "dates": {
      "end": 2024-06-30T23:59:59.000Z,
      "start": 2024-06-28T00:00:00.000Z,
    },
    "name": "Spielberg",
    "resultsLink": "https://www.fiaformula3.com/Results?raceid=1054",
    "round": 6,
  },
  {
    "dates": {
      "end": 2024-07-07T23:59:59.000Z,
      "start": 2024-07-05T00:00:00.000Z,
    },
    "name": "Silverstone",
    "resultsLink": "https://www.fiaformula3.com/Results?raceid=1055",
    "round": 7,
  },
  {
    "dates": {
      "end": 2024-07-21T23:59:59.000Z,
      "start": 2024-07-19T00:00:00.000Z,
    },
    "name": "Budapest",
    "resultsLink": "https://www.fiaformula3.com/Results?raceid=1056",
    "round": 8,
  },
  {
    "dates": {
      "end": 2024-07-28T23:59:59.000Z,
      "start": 2024-07-26T00:00:00.000Z,
    },
    "name": "Spa-Francorchamps",
    "resultsLink": "https://www.fiaformula3.com/Results?raceid=1057",
    "round": 9,
  },
  {
    "dates": {
      "end": 2024-09-01T23:59:59.000Z,
      "start": 2024-08-30T00:00:00.000Z,
    },
    "name": "Monza",
    "resultsLink": "https://www.fiaformula3.com/Results?raceid=1058",
    "round": 10,
  },
]
`;
